<resources>
    <string name="name_app">Editor</string>

    <string name="main_activity_label">Editor</string>

    <string name="search_edit_box">Search</string>

    <string name="button_start_record_activity">Record New</string>

    <string name="sdcard_readonly">Sorry, the SD Card is mounted as read-only and Editor requires it to be writable.</string>
    <string name="no_sdcard">Sorry, Editor can\'t run unless you have an SD Card inserted.</string>
    <string name="sdcard_shared">Sorry, Editor can\'t run while your handset is mounted as a USB device.</string>

    <string name="button_options">Options</string>

    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>

    <string name="edit_intent">Edit</string>

    <string name="time_seconds">seconds</string>

    <string name="what_to_do_with_ringtone">Saved!  Make this your default ringtone or assign it to a contact?</string>
    <string name="set_default_ringtone">Saved!  Make this your default ringtone?</string>
    <string name="set_default_notification">Saved!  Make this your default notification?</string>

    <string name="make_default_ringtone_button">Make Default</string>
    <string name="choose_contact_ringtone_button">Assign to Contact</string>
    <string name="do_nothing_with_ringtone_button">Close</string>

    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_recording">Recording…</string>
    <string name="progress_dialog_saving">Saving…</string>
    <string name="progress_dialog_cancel">Cancel</string>
    <string name="progress_dialog_stop">Stop</string>

    <string name="start_marker">Start marker</string>
    <string name="end_marker">End marker</string>
    <string name="rewind">Rewind</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="ffwd">Fast forward</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="save_button">Save</string>

    <string name="menu_save">Save</string>
    <string name="menu_reset">Reset</string>
    <string name="menu_about">About</string>
    <string name="menu_show_all_audio">Show All Audio</string>

    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_default_ringtone">Set as Default Ringtone</string>
    <string name="context_menu_contact">Assign to Contact</string>
    <string name="context_menu_default_notification">Set as Default Notification</string>

    <string name="file_save_title">Save As:</string>
    <string name="file_save_button_save">Save</string>
    <string name="file_save_button_cancel">Cancel</string>

    <string name="ringtone_type_label">Type:</string>

    <string name="type_music">Music</string>
    <string name="type_alarm">Alarm</string>
    <string name="type_notification">Notification</string>
    <string name="type_ringtone">Ringtone</string>

    <string name="ringtone_name_label">Name:</string>

    <string name="artist_name">Editor</string>
    <string name="artist_name_bsoft">Bsoft</string>

    <string name="delete_ringtone">Delete Ringtone</string>
    <string name="delete_alarm">Delete Alarm</string>
    <string name="delete_notification">Delete Notification</string>
    <string name="delete_music">Delete Music</string>
    <string name="delete_audio">Delete Audio</string>

    <string name="confirm_delete_ringdroid">Are you sure?</string>
    <string name="confirm_delete_non_ringdroid">Are you sure?  This file was not created using Editor!</string>

    <string name="delete_ok_button">Delete</string>
    <string name="delete_cancel_button">Cancel</string>

    <string name="delete_failed">Unable to delete file</string>

    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="alert_yes_button">Yes, please!</string>
    <string name="alert_no_button">No, thanks.</string>

    <string name="save_success_message">Saved!</string>
    <string name="default_ringtone_success_message">Changed default ringtone</string>
    <string name="default_notification_success_message">Changed default notification sound</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="record_error">Error recording audio</string>
    <string name="too_small_error">Can\'t save a file that small, try making it longer.</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>

    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>

    <string name="bad_extension_error">Sorry, Editor is not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, Editor can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>

    <string name="choose_contact_title">Assign ringtone to which contact?</string>
    <string name="success_contact_ringtone">Successfully assigned ringtone to:</string>
    <string name="save_file_success">Save file success</string>

    <string name="ringdroid_app_name">Editor</string>
    <string name="about_title">Editor</string>
    <string name="about_text">Editor</string>
</resources>
