<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navBar"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/navBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"
        android:background="@color/background">

        <com.bsoft.ringdroid.WaveformView
            android:id="@+id/waveform"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <com.bsoft.ringdroid.MarkerView
            android:id="@+id/startmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/start_marker"
            android:nextFocusDown="@+id/endmarker"
            android:src="@drawable/marker_left" />

        <com.bsoft.ringdroid.MarkerView
            android:id="@+id/endmarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/end_marker"
            android:nextFocusDown="@+id/info"
            android:nextFocusUp="@+id/startmarker"
            android:src="@drawable/marker_right" />

    </RelativeLayout>

    <TextView
        android:id="@+id/info"
        style="@style/AudioFileInfoOverlayText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:nextFocusDown="@+id/play"
        android:nextFocusUp="@+id/endmarker"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/xx_small">

        <ImageView
            android:id="@+id/btn_zoom_out"
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/normal"
            android:layout_marginRight="@dimen/normal"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_zoom_out" />

        <ImageView
            android:id="@+id/rew"
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/play"
            android:layout_toStartOf="@+id/play"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/rewind"
            android:src="@drawable/ic_skip_previous_white" />

        <ImageView
            android:id="@+id/play"
            android:layout_width="@dimen/icon_size_xstand"
            android:layout_height="@dimen/icon_size_xstand"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/normal"
            android:layout_marginRight="@dimen/normal"
            android:background="@drawable/ringdroid_bg_circle"
            android:contentDescription="@string/play"
            android:src="@drawable/ic_play_arrow_white" />

        <ImageView
            android:id="@+id/ffwd"
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/play"
            android:layout_toRightOf="@+id/play"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/ffwd"
            android:src="@drawable/ic_skip_next_white" />

        <ImageView
            android:id="@+id/btn_zoom_in"
            android:layout_width="@dimen/icon_size_small"
            android:layout_height="@dimen/icon_size_small"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/normal"
            android:layout_marginRight="@dimen/normal"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_zoom_in" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/normal"
        android:paddingRight="@dimen/normal">

        <TextView
            android:id="@+id/mark_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:labelFor="@+id/starttext"
            android:text="@string/start_label"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_standard"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/starttext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/xx_small"
            android:layout_marginStart="@dimen/xx_small"
            android:gravity="center"
            android:inputType="number|numberDecimal"
            android:text="00.00"
            android:textSize="@dimen/font_size_standard" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/mark_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:labelFor="@+id/endtext"
            android:text="@string/end_label"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_standard"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/endtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/xx_small"
            android:layout_marginStart="@dimen/xx_small"
            android:gravity="center"
            android:inputType="number|numberDecimal"
            android:text="00.00"
            android:textSize="@dimen/font_size_standard" />

    </LinearLayout>

</LinearLayout>
